[project]
name = "stock-screener"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "yfinance>=0.2.40",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "pandas>=2.2",
    "numpy>=1.26",
    "scipy>=1.11",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27", "ruff>=0.6", "mypy>=1.11"]

[project.scripts]
stock-screener = "stock_screener.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["stock_screener"]
